--- a/cart.html
+++ b/cart.html
@@ -57,11 +57,10 @@
 
                 <div class="addToCart">
 
-
                       <tr>
                         <td>
                           <div id="cart_square">
-                            <img src="mages/8.jpg" id="cartImage"/>
+                            <img src="images/8.jpg" id="cartImage"/>
                           </div>
                         </td>
                         <td class="prodName">Test Name <br />
@@ -104,14 +103,15 @@
             <input type="hidden" name="total">
           </form>
         </div>
+
         </main>
     </div>
-    
+
             <!-- Footer --->
         <div class="footerBody">
             <div class="footerLogoText">
                 <a href="index.html">
-                    <img src="images/logo.png" alt="logo">
+                    <img src="images/footer.png" alt="logo">
                 </a>
                 <p id="footerP">There are many variations of passages of Lorem Ipsum available, but the majority have suffered duskam alteration variations of passages</p>
             </div>
