--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 					<div class="menuItems">
 						
 							<ul class="navUl">
-								<li class="drop"><a href="index.html">Home</a></li>
-                                <li class="drop"><a href="shop-grid.html">Shop</a></li>	
-								<li class="drop"><a href="about.html">About</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li ><a class="drop" href="index.html">Home</a></li>
+                                <li ><a class="drop" href="shop-grid.html">Shop</a></li>	
+								<li ><a class="drop" href="about.html">About</a></li>
+								<li><a class="drop" href="contact.html">Contact</a></li>
 								<li style="float:right"><a class="active" href="login-or-register.html">Profile</a></li>
 								<li style="float:right"><a class="active" href="cart.html">Your Cart</a></li>
 							</ul>
@@ -246,7 +246,7 @@
 		<div class="footerBody">
 			<div class="footerLogoText">
 				<a href="index.html">
-					<img src="images/logo.png" alt="logo">
+					<img src="images/footer.png" alt="logo">
 				</a>
 				<p id="footerP">There are many variations of passages of Lorem Ipsum available, but the majority have suffered duskam alteration variations of passages</p>
 			</div>
