--- a/login-or-register.html
+++ b/login-or-register.html
@@ -42,7 +42,7 @@
 		</header>
 		<!-- End Header -->
 		
-    	<div id="login" style="padding-top: 100px;">
+    	<div id="login" style="padding-top: 100px; text-align: center;">
 
             <form name="login_form" method="post">
                 <fieldset id="login_section" style="border: none">
@@ -55,7 +55,7 @@
 
                     <?php if($error){echo "<p class='login_fail'><b>Your password and email do not match. Please try again</b></p>";}?>
 
-                    <a href="newUser.php" id="contact_link">Are you a new user? Click here to register.</a>
+                    <a href="registration.html" id="contact_link">Are you a new user? Click here to register.</a>
                 </fieldset>
             </form>
 
@@ -66,7 +66,7 @@
 		<div class="footerBody">
 			<div class="footerLogoText">
 				<a href="index.html">
-					<img src="images/logo.png" alt="logo">
+					<img src="images/footer.png" alt="logo">
 				</a>
 				<p id="footerP">There are many variations of passages of Lorem Ipsum available, but the majority have suffered duskam alteration variations of passages</p>
 			</div>
