--- a/src/main/webapp/WEB-INF/jsp/cart.html
+++ b/src/main/webapp/WEB-INF/jsp/cart.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet"> 
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="style.css"> <!-- main css -->
+    <link rel="stylesheet" href="css/style.css"> <!-- main css -->
 </head>
 <body>
     <!-- Main wrapper -->
