Added footer component

--- a/src/main/webapp/WEB-INF/jsp/cart.html
+++ b/src/main/webapp/WEB-INF/jsp/cart.html
@@ -21,7 +21,7 @@
                 <div class="row">
                     <div class="logo">
                             <a href="index.html">
-                                <img src="images/logo.png" alt="logo images">
+                                <img src="../../images/logo.png" alt="logo images">
                             </a>
                         </div>
                     
@@ -60,7 +60,7 @@
                       <tr>
                         <td>
                           <div id="cart_square">
-                            <img src="images/8.jpg" id="cartImage"/>
+                            <img src="../../images/8.jpg" id="cartImage"/>
                           </div>
                         </td>
                         <td class="prodName">Test Name <br />
@@ -111,7 +111,7 @@
         <div class="footerBody">
             <div class="footerLogoText">
                 <a href="index.html">
-                    <img src="images/footer.png" alt="logo">
+                    <img src="../../images/footer.png" alt="logo">
                 </a>
                 <p id="footerP">There are many variations of passages of Lorem Ipsum available, but the majority have suffered duskam alteration variations of passages</p>
             </div>
